<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ds4_driver</name>
  <version>1.0.0</version>
  <description>ROS 2 humble driver for the DualShock 4 controller</description>
  <maintainer email="test@test.de">test</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ds4d_bringup</depend>
  <depend>ds4d_core</depend>
  <depend>ds4d_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
